[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dex-mcp-server"
version = "0.1.0"
description = "MCP server for Dex CRM - access contacts, notes, and reminders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
dex-mcp-server = "dex_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dex_mcp_server"]
